# devhunter

./: README.md  admin_auth.py  alembic.ini  app.py  config.py  pyproject.toml  views.py
alembic/: env.py
models/: db.py
static/css/: style.css
static/script/: card.js  responses.js  vacancies.js
template/: auth.html  card.html  company.html  index.html  profile.html  reg.html  responses.html  vacancies.html
